Replace index based calls with new methods